Use the modern String API for formatting and emptiness checks