@@ -299,7 +299,7 @@ public class RawTableReader extends TableReader<RawTableView, RawTableView.Build
             return null;
         }
         // Mask each component to an unsigned byte so a negative short never sign-extends to 8 hex digits.
-        String hex = String.format("#%02x%02x%02x", rgb[0] & 0xff, rgb[1] & 0xff, rgb[2] & 0xff);
+        String hex = "#%02x%02x%02x".formatted(rgb[0] & 0xff, rgb[1] & 0xff, rgb[2] & 0xff);
         return hex.equals(defaultHex) ? null : hex;
     }
 
